# lambda-graphs

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  setup.cfg
docs/: json-output-format.md
examples/: docker_commands.txt
examples/atlas_paper_fig_4_demo_multi_file_example/: main.c  math_utils.c  math_utils.h
examples/multi/: main.c  utils.c  utils.h
examples/scripts/: multi.sh  multi_atlas_paper_fig_4_demo_multi_file_example.sh  single_atlas_paper_fig_3_sample_code_block.sh  single_demo.sh  single_function_pointers.sh  single_pass_by_reference.sh  single_test_single.sh
examples/single/: atlas_paper_fig_3_sample_code_block.cpp  pass_by_reference.cpp
paper_assets/: function_pointers.dot  pass_by_reference.dot
src/atlas/: __init__.py  cli.py
src/atlas/tree_parser/: c_parser.py  custom_parser.py  parser_driver.py
src/atlas/utils/: c_nodes.py  cpp_nodes.py  java_nodes.py  multi_file_merger.py  postprocessor.py
src/codeviews/AST/: AST.py  AST_driver.py
src/codeviews/CFG/: CFG.py  CFG_c.py  CFG_cpp.py  CFG_driver.py  CFG_java.py  CFG_js.py
src/codeviews/CST/: CST_driver.py
src/codeviews/DFG/: DFG_driver.py
src/codeviews/SDFG/: SDFG.py  SDFG_c.py  (+3 more)
src/lambda_graphs/: __init__.py  __main__.py  cli.py
src/lambda_graphs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tree_parser/: c_parser.py  cpp_parser.py  custom_parser.py  java_parser.py  js_parser.py  parser_driver.py
src/utils/: c_nodes.py  cpp_nodes.py  java_nodes.py  js_nodes.py  multi_file_merger.py  postprocessor.py
(+32 files in other folders)
