[metadata]
name = lambda-graphs
version = 0.4.5
description = Generate combined multi-code view graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PrinOrange/lambda-graphs
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    networkx==2.6.3
    tree-sitter>=0.22
    tree-sitter-c
    tree-sitter-cpp
    tree-sitter-java
    tree-sitter-javascript
    deepdiff>=7.0.0
    pydot==1.4.1
    typer>=0.9.0
    loguru==0.6.0
    setuptools>=69.0; python_version>='3.12'

python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    lambda-graphs=lambda_graphs.cli:app

[options.extras_require]
dev =
    tqdm
    pqdm
    loguru
    GitPython
    pandas
